# ld2410x-api

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build_test.yml
src/: CMakeLists.txt  ld2410x.c  ld2410x.h  ld2410x_defs.h
test/: CMakeLists.txt  common.c  common.h  test_ld2410x_broken_frame.c  test_ld2410x_command_mismatch.c  test_ld2410x_get_config_data.c  test_ld2410x_get_dist_res.c  test_ld2410x_get_fw_ver.c  test_ld2410x_get_mac_addr.c  test_ld2410x_intf_busy.c  test_ld2410x_invalid_length.c  test_ld2410x_invalid_param.c  test_ld2410x_null_ptr.c  test_ld2410x_obtain_bt_permission.c  test_ld2410x_restart.c  test_ld2410x_restore_configuration.c  test_ld2410x_set_baudrate.c  test_ld2410x_set_bluetooth_mode.c  test_ld2410x_set_bt_password.c  test_ld2410x_set_config_mode.c  test_ld2410x_set_dist_dur.c  test_ld2410x_set_dist_res.c  test_ld2410x_set_engineering_mode.c  test_ld2410x_set_gate_sensitivity.c  test_ld2410x_struct_init.c
